lab-applications/dashy/base/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashy
spec:
  selector:
    matchLabels:
      app: dashy
  replicas: 1
  template:
    metadata:
      labels:
        app: dashy
    spec:
      containers:
        - name: dashy
          resources:
            limits:
              cpu: 500m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
          image: docker.io/lissy93/dashy:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: dashy-config
              mountPath: /app/public/
      volumes:
        - name: dashy-config
          configMap:
            name: dashy-config
