lab-applications/dashy/base/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: dashy-web
  labels:
    app: dashy
    service: dashy-web
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
      name: dashy-web
  selector:
    app: dashy
  type: ClusterIP
