lab-applications/dashy/base/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-dashy
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - dashy.apps.k8s.kemo.labs
  rules:
    - host: dashy.apps.k8s.kemo.labs
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: dashy-web
                port:
                  number: 80
